DGC Edits from Margie

--- a/direct_give.html
+++ b/direct_give.html
@@ -93,7 +93,7 @@
                 <div class="col-sm-8 col-xs-12" id="info">
                     <h4 class="indent">CLIP depends completely on donations to fund the programs not covered by normal school district funds. These programs include the Mandarin Chinese curriculum, CLIP Art program, and Homework Club to name a few. Last year, we raised a total of $321,560 ($258,996 from your generous donations, $62,564 in corporate matches.) Earlier this year, Cupertino Union School District agreed to contribute ~$70,000 towards staff and curriculum costs and zero period for 6th grade. With this additional support, this year’s CLIP budget has been set at $287,625.</h4>
 
-                    <h4 class="indent">The lower budget target has also allowed us to lower the per student donation amount for this year! This year CLIPCO is asking CLIP families to donate <b>$425</b> for each child in Kindergarten to 5th grade, and <b>$200</b> for each child in 6th to 8th grade to cover their share of CLIP educational expenses. As with last years, CLIPCO is offering three different prizes to encourage a friendly contest:</h4>
+                    <h4 class="indent">The lower budget target has also allowed us to lower the per student donation amount for this year! This year CLIPCO is asking CLIP families to donate <b>$425</b> for each child in Kindergarten to 5th grade, and <b>$200</b> for each child in 6th to 8th grade to cover their share of CLIP educational expenses. As with previous years, CLIPCO is offering three different prizes to encourage a friendly contest:</h4>
 
                     <ul>
                         <li>Individual - An individual prize is awarded to those donating at least the minimum ask per student ($425 for K-5th, $200 for 6th-8th).</li>
@@ -102,9 +102,10 @@
                     </ul>
 
                     <br>
+                    <h4>The contest begins October 22, 2018.</h4>
                     <h4><strong>Contest Rules:</strong></h4>
                     <ol>
-                        <li>Donations must be received by 11:59pm, <b>DATE TBD</b> in order to be counted.</li>
+                        <li>Donations must be received by 11:59pm, <b>November 15, 2018</b> in order to be counted.</li>
                         <li>Only donations of the minimum ask ($425 for K-5, $200 for 6th-8th) or more will count towards the contest.</li>
                         <li>Target dollar amount is determined by the total number of students per home room (or grade if Miller students) multiplied by the requested donation amount.</li>
                         <li>Donors to be recognized in a future publication with an option to remain anonymous.</li>
