--- a/donateFAQ.html
+++ b/donateFAQ.html
@@ -119,7 +119,7 @@
             <p class="faq-answer">To reduce the crunch during the Direct Give Campaign, we are encouraging people to
                 donate early! Bring your donation to the CLIP table at Meyerholz Back to School Night (August 23rd) to
                 qualify to receive a CLIP window cling for each student whose family donates the minimum ask in their
-                name. For Miller students, turn in your form and check to your child’s CLIP teacher by Friday Aug 25,
+                name. For Miller students, turn in your form and check to your child’s CLIP teacher by Friday, August 31,
                 2018 to qualify for the CLIP window cling.</p>
             <p><strong class="faq-question">Why am I been asked to donate at the beginning of the school year?</strong>
             </p>
@@ -194,16 +194,17 @@
         <div class="faq col-sm-12">
             <h2>Questions about the Direct Give Competition</h2>
             <p><strong class="faq-question">When is the contest taking place? </strong></p>
-            <p class="faq-answer">The Contest date will be annouced soon for this year! Visit the 
+            <p class="faq-answer">The contest will take place between October 22, 2018 until November 15th at 11:59pm. Visit the 
                 <a href="direct_give.html">direct give page</a> for more information!
             </p>
             <p><strong class="faq-question">Why do we need a contest to drive donations?</strong></p>
-            <p class="faq-answer">The Direct Give Contest is an annual event that encourages friendly competition to
-                raise funds for CLIP. This is the fifth year that the contest has taken place. Since it started in
-                2010-2011, the participation rate has jumped from roughly 50% in the previous years to nearly 100%! The
-                high participation rate allows us to keep the suggested donation amount low since the more families
-                donate, the less each family needs to donate in order to keep the program afloat. The high participation
-                rate is also a strong indication of the community’s commitment and support of the program.</p>
+            <p class="faq-answer">The Direct Give Contest is an annual event that encourages friendly competition to raise
+            	funds for CLIP. Since it started in 2010-2011, the participation rate has jumped from roughly 50% in the
+            	previous years to nearly 100%! The high participation rate allows us to keep the suggested donation amount low
+            	since the more families donate, the less each family needs to donate in order to keep the program afloat. The
+            	high participation rate is also a strong indication of the community’s commitment and support of the
+            	program.
+            </p>
             <p><strong class="faq-question">What are the prizes this year?</strong></p>
             <p class="faq-answer"><p class="faq-answer">As with last years, CLIPCO is offering three different prizes to encourage a friendly contest:
             </p>
@@ -224,7 +225,7 @@
                 <a href="direct_give.html">See Full Contest Details and Rules</a>
             </p>
             <p><strong class="faq-question">When will the winners receive the prizes? </strong></p>
-            <p class="faq-answer">Individual prizes will be handed out to students and parents on specific dates (to be
+            <p class="faq-answer">Individual prizes will be handed out to students on specific dates (to be
                 announced) during lunch time at the GLC. For any given week, the donation must be received by Sunday in
                 order to guarantee that the student's name is on the donated list.
                 <br>
