--- a/Website.html
+++ b/Website.html
@@ -240,6 +240,10 @@
                 position:relative;
             }
             
+            #bottom-bar .row{
+                display: inherit;
+            }
+            
         </style>
     </head>
 
@@ -484,7 +488,7 @@
                 <a href="#top" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
             </footer>
         </div>
-        <footer class="container-fluid">
+        <footer id="bottom-bar" class="container-fluid">
             <div class="row">
                 <div class="text-left col-sm-6">
                     <h4>Developed By:</h4>
@@ -493,7 +497,7 @@
                 </div>
                 <div class="text-right col-sm-6">
                     <h4>Social Media:</h4>
-                    <p>Facebook <a href="https://www.facebook.com/cusdclipco" title="Facebook">www.facebook.com/cusdclipco</a></p><br>
+                    <p>Facebook <a href="https://www.facebook.com/cusdclipco" title="Facebook">www.facebook.com/cusdclipco</a></p>
                     <p>Youtube Channel <a href="https://www.youtube.com/channel/UCyYfMrp0h5PlVz8inZs9aHQ" title="Visit Youtube">www.youtube.com/cusdclipco</a></p>
                 </div>
             </div>
