--- a/subpage_template.html
+++ b/subpage_template.html
@@ -41,16 +41,31 @@
                     <p class="indent">In dignissim nisi nec libero iaculis, quis scelerisque ante vulputate. Nulla facilisi. Nulla feugiat ornare orci ac feugiat. Vivamus sed diam venenatis, egestas mauris sit amet, vulputate justo. Fusce placerat ut massa vel commodo. Sed lacinia, velit ut fringilla faucibus, risus justo eleifend ligula, sed ultrices mauris ante in tortor. Ut hendrerit leo eros, non egestas augue consequat vitae. Aliquam condimentum massa ex, vitae lobortis neque blandit sed. Vivamus tristique nisi et nunc hendrerit feugiat.</p>
 
                     <p class="indent">In diam odio, imperdiet at ipsum eu, tempus rhoncus neque. Nulla feugiat, lectus vel tincidunt sodales, felis neque sollicitudin lorem, quis rutrum erat leo non erat. Fusce sit amet facilisis tortor, id laoreet risus. Morbi sit amet iaculis quam, sollicitudin ullamcorper tortor. Ut a iaculis sapien, vitae ultricies nisl. Praesent et justo sed risus imperdiet efficitur eu at lectus. Proin metus eros, aliquam id auctor id, volutpat ut sapien. Vivamus eu quam porttitor, blandit elit ut, consequat tellus. Nullam vitae sapien vel nisl ornare ullamcorper vitae et ante. Nam rutrum ligula eget sodales fermentum. Praesent vitae orci consectetur, cursus justo ac, aliquam quam.</p>
-
-                    <p class="indent">Nunc venenatis, lectus id iaculis bibendum, diam magna feugiat ante, eget tincidunt mi dolor ut urna. Vestibulum lobortis nibh eget odio molestie, eget hendrerit orci cursus. Proin arcu nisl, varius et lobortis sit amet, ornare a sapien. Morbi pellentesque libero eu quam tristique, quis blandit metus ornare. Donec fringilla magna vel lacinia tempus. Donec et interdum purus. Sed lacinia fermentum tincidunt. Sed non dui sit amet nisl porttitor pulvinar. Nunc bibendum, urna vitae ultrices condimentum, urna metus tincidunt ex, a laoreet lorem nibh vel turpis.</p>
-
-                    <p class="indent">Nunc a pharetra tortor. In hac habitasse platea dictumst. Fusce maximus diam purus, vitae laoreet turpis semper a. Morbi nisi nisi, bibendum eu justo eget, maximus pellentesque nisl. Cras molestie volutpat quam dapibus faucibus. In at leo sit amet nunc placerat laoreet. Morbi eget mauris facilisis, cursus est non, porttitor ipsum. Fusce eu ligula tortor. Sed interdum, metus sit amet faucibus lacinia, eros urna sodales est, vehicula congue mi dui nec elit. Duis a est non erat fringilla rhoncus nec ut mauris. Donec consequat risus vitae iaculis iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In lacinia dui sit amet lacus ultrices dictum. Sed eget ligula nisi. Sed est elit, gravida tincidunt neque vel, pellentesque porta nisl.</p>
                     <br>
                     <button class="btn btn-default btn-lg" id="clickMe" onclick="doFunction();">Call to Action!</button>
                 </div>
                 <div class="col-sm-4 col-xs-12" id="stock-image">
                     <!-- scripty mcscriptface will fill this in-->
                     <script async src="imageLoading.js" id="image-laoding-script"></script>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <h2>another row</h2>
+                    <p class="indent">Nunc venenatis, lectus id iaculis bibendum, diam magna feugiat ante, eget tincidunt mi dolor ut urna. Vestibulum lobortis nibh eget odio molestie, eget hendrerit orci cursus. Proin arcu nisl, varius et lobortis sit amet, ornare a sapien. Morbi pellentesque libero eu quam tristique, quis blandit metus ornare. Donec fringilla magna vel lacinia tempus. Donec et interdum purus. Sed lacinia fermentum tincidunt. Sed non dui sit amet nisl porttitor pulvinar. Nunc bibendum, urna vitae ultrices condimentum, urna metus tincidunt ex, a laoreet lorem nibh vel turpis.</p>
+                </div>
+                <div class="col-sm-6 col-xs-12">
+                    <h2>another row 2: electric boogaloo</h2>
+                    <p class="indent">Nunc a pharetra tortor. In hac habitasse platea dictumst. Fusce maximus diam purus, vitae laoreet turpis semper a. Morbi nisi nisi, bibendum eu justo eget, maximus pellentesque nisl. Cras molestie volutpat quam dapibus faucibus. In at leo sit amet nunc placerat laoreet. Morbi eget mauris facilisis, cursus est non, porttitor ipsum. Fusce eu ligula tortor. Sed interdum, metus sit amet faucibus lacinia, eros urna sodales est, vehicula congue mi dui nec elit. Duis a est non erat fringilla rhoncus nec ut mauris. Donec consequat risus vitae iaculis iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In lacinia dui sit amet lacus ultrices dictum. Sed eget ligula nisi. Sed est elit, gravida tincidunt neque vel, pellentesque porta nisl.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-white">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="self-center">Another section</h2>
+                    <h3>This time the background color is white</h3>
+                    <p class="indent">In dignissim nisi nec libero iaculis, quis scelerisque ante vulputate. Nulla facilisi. Nulla feugiat ornare orci ac feugiat. Vivamus sed diam venenatis, egestas mauris sit amet, vulputate justo. Fusce placerat ut massa vel commodo. Sed lacinia, velit ut fringilla faucibus, risus justo eleifend ligula, sed ultrices mauris ante in tortor. Ut hendrerit leo eros, non egestas augue consequat vitae. Aliquam condimentum massa ex, vitae lobortis neque blandit sed. Vivamus tristique nisi et nunc hendrerit feugiat.</p>
                 </div>
             </div>
         </div>
