--- a/honor_roll_2016-2017.html
+++ b/honor_roll_2016-2017.html
@@ -58,7 +58,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><span
-                                    class="donation-level-title">Platinum</span><span class="donation-level-range">&nbsp;(dontation of $950 or more)</span></a>
+                                    class="donation-level-title">Platinum</span><span class="donation-level-range">&nbsp;(Donation of $950 or more)</span></a>
                         </h4>
                     </div>
                     <div id="collapse1" class="panel-collapse collapse">
@@ -94,7 +94,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><span
-                                    class="donation-level-title">Gold</span><span class="donation-level-range">&nbsp;(dontation of $700 - $949)</span></a>
+                                    class="donation-level-title">Gold</span><span class="donation-level-range">&nbsp;(Donation of $700 - $949)</span></a>
                         </h4>
                     </div>
                     <div id="collapse2" class="panel-collapse collapse">
@@ -120,7 +120,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><span
-                                    class="donation-level-title">Silver</span><span class="donation-level-range">&nbsp;(dontation of $450 - $699)</span></a>
+                                    class="donation-level-title">Silver</span><span class="donation-level-range">&nbsp;(Donation of $450 - $699)</span></a>
                         </h4>
                     </div>
                     <div id="collapse3" class="panel-collapse collapse">
@@ -490,7 +490,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span
-                                    class="donation-level-title">Bronze</span><span class="donation-level-range">&nbsp;(dontation of $225 - $449)</span></a>
+                                    class="donation-level-title">Bronze</span><span class="donation-level-range">&nbsp;(Donation of $225 - $449)</span></a>
                         </h4>
                     </div>
                     <div id="collapse4" class="panel-collapse collapse">
