--- a/honor_roll_2017-2018.html
+++ b/honor_roll_2017-2018.html
@@ -144,6 +144,8 @@
                         </div>
                         <div id="collapse3" class="panel-collapse collapse">
                             <div class="panel-body">
+                            	<span class="grade-header">Kindergarten</span><br>
+                            	<span class="family-name">Family of Jonathan Cheung</span><br>
                                 <span class="grade-header">1st Grade</span><br>
                                 <span class="family-name">Family of Aiden Wu</span><br>
                                 <span class="family-name">Family of Andrew Liou</span><br>
