final changes for max width update
updated all pages to work with the new max width look

--- a/secret.html
+++ b/secret.html
@@ -13,6 +13,9 @@
     <script src="paralax.js"></script>
     <style type="text/css">
         /* some css can go here */
+        .row {
+            padding: 15px;
+        }
     </style>
 </head>
 <body id="myPage" class="bg-grey" onload="loadImage(0)">
@@ -30,9 +33,9 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="container-fluid col-sm-8 col-xs-12">
+        <div class="col-sm-8 col-xs-12">
         	<h2>Welcome to the CLIPCO secret page</h2>
-        	<div class="row bg-white">
+        	<div class="bg-white">
         		<h4>Video Links:</h4>
         		<p><a href="https://youtu.be/dQw4w9WgXcQ">About CLIPCO video</a></p>
         		<p><a href="https://youtube.com/rektsupport">More Cool and Amazing videos!</a></p>
