--- a/Social_Media.html
+++ b/Social_Media.html
@@ -58,10 +58,15 @@ by CUSDCLIPCO</a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 </div> -->
-            <div class="fb-page col-md-6 col-xs-12" data-href="https://www.facebook.com/cusdclipco/" data-tabs="timeline" data-width="600" data-height="800" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
-                <blockquote cite="https://www.facebook.com/cusdclipco/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/cusdclipco/">CUSD Clipco</a></blockquote>
+            <div class="col-sm-6 col-xs-12" >
+                <h2>Facebook Page</h2>
+                <div class="fb-page" data-href="https://www.facebook.com/cusdclipco/" data-tabs="timeline" data-width="600" data-height="800" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
+                    <blockquote cite="https://www.facebook.com/cusdclipco/" class="fb-xfbml-parse-ignore">
+                        <a href="https://www.facebook.com/cusdclipco/">CUSD Clipco</a>
+                    </blockquote>
+                </div>
             </div>
-            <div class="col-md-6 col-xs-12" id="youtube-column">
+            <div class="col-sm-6 col-xs-12" id="youtube-column">
                 <h2>Videos</h2>
                 <!--<iframe  id="about-video-iframe" src="https://www.youtube.com/embed/WMOPfMAkuyE" frameborder="0">Loading...</iframe>-->
             </div>
