--- a/programs.html
+++ b/programs.html
@@ -28,19 +28,21 @@
 </div>
 
 <div class="container-fluid bg-grey">
-    <div class="col-md-6 col-sm-12">
-        <h2>List of Programs</h2>
-        <h4><a href="ASEP.html">ASEP</a></h4>
-        <p>After school enrichment program. This parent funded program provides classes in Chinese culture and arts to supplement the Mandarin learning experience.</p>
-        <p></p>
-        <h4><a href="CNYP.html">Chinese New Year Parade</a></h4>
-        <p>Every year the CLIP program participates in the San Francisco Chinese New Year Parade. Students play Chinese Cymbals and Drums and dress up in Chinese New Year costumes.</p>
-        <h4><a href="CLIP%20Art.html">Clip&nbsp;Art</a></h4>
-        <p>CLIP Art is a language and cultural enrichment class focused on introducing chinese art that connects with the CLIP curriculum.</p>
-    </div>
-    <div class="col-md-6 col-xs-12" id="stock-image">
-        <!-- scripty mcscriptface will fill this in-->
-        <script src="imageLoading.js" id="image-laoding-script"></script>
+    <div class="row">
+        <div class="col-sm-6 col-xs-12">
+            <h2>List of Programs</h2>
+            <h4><a href="ASEP.html">ASEP</a></h4>
+            <p>After school enrichment program. This parent funded program provides classes in Chinese culture and arts to supplement the Mandarin learning experience.</p>
+            <p></p>
+            <h4><a href="CNYP.html">Chinese New Year Parade</a></h4>
+            <p>Every year the CLIP program participates in the San Francisco Chinese New Year Parade. Students play Chinese Cymbals and Drums and dress up in Chinese New Year costumes.</p>
+            <h4><a href="CLIP%20Art.html">Clip&nbsp;Art</a></h4>
+            <p>CLIP Art is a language and cultural enrichment class focused on introducing chinese art that connects with the CLIP curriculum.</p>
+        </div>
+        <div class="col-sm-6 col-xs-12" id="stock-image">
+            <!-- scripty mcscriptface will fill this in-->
+            <script src="imageLoading.js" id="image-laoding-script"></script>
+        </div>
     </div>
 </div>
 <footer class="container-fluid text-center">
