max width for honor roll.html

--- a/honor_roll_2017-2018.html
+++ b/honor_roll_2017-2018.html
@@ -11,6 +11,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="paralax.js"></script>
     <style type="text/css">
+        
+        .row{
+            display: block;
+        }
 
         .donation-level-title {
             font-size: 2em;
@@ -28,7 +32,7 @@
             color: black;
         }
 
-        @media screen and (max-width:768px){
+        @media screen and (max-width:822px){
 
             .jumbotron{
                 height: 300px;
