--- a/donations.html
+++ b/donations.html
@@ -86,10 +86,9 @@
                     several <a href="direct_give.html#prizes">prizes</a> to those who donate.
                 </h4>
                 <br>
-                <h2>Online Donation by PayPal</h2>
+                <h2>Online Pledge Form</h2>
                 <h4>
-                    Please make your online donation below using PayPal's secure and convenient payment system. After making
-                    a donation you will receive a receipt detailing your donation information.
+                    Please use the online pledge form below for both check and PayPal donations.
                     <br>
                     For questions about your donations, please contact our Treasurer(s) at donate@cusdclipco.org.
                     <br>
