Remove old pledge form links
Removed links to the paper pledge form. Changed verbiage to redirect to the online pledge form.

Fixed some formatting in the "Funding CLIPCO" section.

--- a/donations.html
+++ b/donations.html
@@ -84,24 +84,25 @@
             <div class="col-sm-8 col-xs-12">
                 <h2>Funding CLIPCO</h2>
                 <h4>CLIP depends completely on donations to fund the programs not covered by normal school district funds.
-                    These programs include the Mandarin
-                    <br>Chinese curriculum, CLIP Art program, and Homework Club to name a few. To support these programs,
-                    CLIPCO hosts the <a href="direct_give.html">Direct Give Contest</a>
-                    <br>to garner donations. To foster friendly competition and to encourage donations, CLIPCO is offering
+                    These programs include the Mandarin Chinese curriculum, CLIP Art program, and Homework Club to name a few.
+                    <br><br>
+                    To support these programs, CLIPCO hosts the <a href="direct_give.html">Direct Give Contest</a>
+                    to garner donations. 
+                    <br><br>
+                    To foster friendly competition and to encourage donations, CLIPCO is offering
                     several <a href="direct_give.html#prizes">prizes</a> to those who donate.
                 </h4>
                 <br>
                 <h2>Online Pledge Form</h2>
                 <h4>
-                    Please use the online pledge form below for both check and PayPal donations.
-                    <br>
-                    For questions about your donations, please contact our Treasurer(s) at donate@cusdclipco.org.
-                    <br>
+                    Please use the online pledge form below for both check and PayPal donations. 
+                    <br><br>
+                    If paying by check, please return a print out of your email confirmation along with your payment to the 
+                    Meyerholz office. Please make checks payable to &quot;CLIPCO&quot;)and include your student&#39;s grade 
+                    and room number on the check.
+                    <br><br>
                     Thank you for your support in the continuing success of CLIP!
-                    <br>
-                    <a href="donateFAQ.html">Donations FAQ</a>
                 </h4>
-                <h4>To pay by check, download and fill out the <a href="pledgeform.html">pledge form</a>.</h4>
                 <br>
             </div>
             <div class="col-sm-4 col-xs-12" id="stock-image">
@@ -115,6 +116,9 @@
                 </div>
             </div>
         </div>
+		<br><br>
+		For questions about your donations, please contact our treasurer at treasurer@cusdclipco.org or refer to 
+		our <a href="donateFAQ.html">Donations FAQ</a>.
         <footer class="text-center bg-grey">
             <a href="#top" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
         </footer>
