--- a/direct_give.html
+++ b/direct_give.html
@@ -191,7 +191,7 @@
             <hr>
             <div class="row" id="more-info">
                 <h2 class="text-center">How to Donate</h2>
-                <h4 class="indent">You may <a href="donations.html">donate online</a> through PayPal using your credit card, debit card or <b>PayPal</b> account or Download the <a href="pledgeform.html">Pledge Form</a> to pay by check. Please return this form along with your payment (payable to &quot;CLIPCO&quot;) to the Meyerholz office, your student&#39;s home room teacher or your CLIPCO grade.</h4>
+                <h4 class="indent">Please use the <a href="donations.html">online pledge form</a> for both donations by check or through PayPal using your credit card or debit card.</h4>
                 <h4 class="indent"><b>If you have more questions about the Direct Give Contest, please read our <a href="donateFAQ.html">FAQ</a>. If the information there does not answer your question, please contact your <a href="contact.html?show=board">CLIPCO grade representative.</a></b></h4>
                 <h4 class="indent">Please don&#39;t forget to potentially double your donation by applying for <b>corporate matching</b> through your employer. Corporate matching helps CLIPCO tremendously in making up for donation shortfalls. Every year, the corporate match donations to CLIPCO contribute between 15-25% of our annual budget. Please see <a href="donateFAQ.html#corporate-matching-scroll">How do I get corporate matching for my donation?</a> for more information.
                 </h4>
