--- a/donations.html
+++ b/donations.html
@@ -98,8 +98,8 @@
                     Please use the online pledge form below for both check and PayPal donations. 
                     <br><br>
                     If paying by check, please return a print out of your email confirmation along with your payment to the 
-                    Meyerholz office. Please make checks payable to &quot;CLIPCO&quot;)and include your student&#39;s grade 
-                    and room number on the check.
+                    Meyerholz office. Please make checks payable to <b>CLIPCO</b> and include your <b>student&#39;s grade 
+                    and room number</b> on the check.
                     <br><br>
                     Thank you for your support in the continuing success of CLIP!
                 </h4>
