--- a/direct_give.html
+++ b/direct_give.html
@@ -193,7 +193,7 @@
                 <h2 class="text-center">How to Donate</h2>
                 <h4 class="indent">Please use the <a href="donations.html">online pledge form</a> for both donations by check or through PayPal using your credit card or debit card.</h4>
                 <h4 class="indent"><b>If you have more questions about the Direct Give Contest, please read our <a href="donateFAQ.html">FAQ</a>. If the information there does not answer your question, please contact your <a href="contact.html?show=board">CLIPCO grade representative.</a></b></h4>
-                <h4 class="indent">Please don&#39;t forget to potentially double your donation by applying for <b>corporate matching</b> through your employer. Corporate matching helps CLIPCO tremendously in making up for donation shortfalls. Every year, the corporate match donations to CLIPCO contribute between 15-25% of our annual budget. Please see <a href="donateFAQ.html#corporate-matching-scroll">How do I get corporate matching for my donation?</a> for more information.
+                <h4 class="indent">Please do not forget to potentially double your donation by applying for corporate matching through your employer. Corporate matching helps CLIPCO tremendously. Every year, the corporate match donations to CLIPCO contributes to about 25% of our annual budget. Remember, corporate matching donations do not count towards the Direct Give Campaign tallies. Only parental donations count towards the campaign. Please see <a href="donateFAQ.html#corporate-matching-scroll">How do I get corporate matching for my donation?</a> for more information.
                 </h4>
             </div>
             <hr>
