--- a/Website.html
+++ b/Website.html
@@ -455,9 +455,7 @@
                         </div>
                         <div class="panel-body">
                             <a href="donations.html"><h3>Donate Online</h3></a>
-                            <p>PayPal, Debit, or Credit Card</p>
-                            <a href="documents/17-18pledgeform.pdf"><h3>Donate by check</h3></a>
-                            <p>Download the Pledge Form</p>
+                            <p>PayPal, Debit, Credit Card, or Check</p>
                             <a href="donateFAQ.html"><h3>FAQ</h3></a>
                             <p>Frequently Asked Questions.</p>
                         </div>
