--- a/donateFAQ.html
+++ b/donateFAQ.html
@@ -52,7 +52,7 @@
                 width: 85%;
             }
             #prize-info-table tr, #prize-info-table td{
-                padding: 0px;
+                padding: 10px;
             }
 
         </style>
@@ -215,7 +215,7 @@
 
                     <p><strong class="faq-question">What are the prizes this year?</strong></p>
                     <p class="faq-answer" style="margin-bottom: 5px;">As with last years, CLIPCO is offering three different prizes to encourage a friendly contest:</p>
-                    <table id="prize-info-table" class="noborder">
+                    <table id="prize-info-table">
                         <col id="prize-label-column">
                         <col id="prize-detail-column">
                         <tr>
@@ -223,7 +223,7 @@
                                 Individual Prize:
                             </td>
                             <td>
-                                A CLIP Pencil Case and 2 Pencils – awarded to those donating at least $225 per student.
+                                A CLIP Pencil Case and 2 Pencils – awarded to those donating at least $425 per student.
                             </td>
                         </tr>
                         <tr>
@@ -231,7 +231,7 @@
                                 Class Prize:
                             </td>
                             <td>
-                                Super cool T-shirt with Our Year of the Rooster Logo – awarded to the home room (Meyerholz) or grade (Miller) that meets 90% participation rate and 90% target dollar amount.
+                                Super cool T-shirt with Our Year of the Pig Logo – awarded to the home room (Meyerholz) or grade (Miller) that meets 90% participation rate and 90% target dollar amount.
                             </td>
                         </tr>
                         <tr>
@@ -239,7 +239,7 @@
                                 Grand Prize:
                             </td>
                             <td>
-                                A Sling Backpack with Our Year of the Rooster Logo -- awarded to the top 3 home room (Meyerholz) or grade (Miller) with the highest percentage towards the target dollar amount.
+                                A Sling Backpack with Our Year of the Pig Logo -- awarded to the top 3 home room (Meyerholz) or grade (Miller) with the highest percentage towards the target dollar amount.
                             </td>
                         </tr>  
                     </table>
