--- a/donateFAQ.html
+++ b/donateFAQ.html
@@ -223,7 +223,7 @@
                                 Individual Prize:
                             </td>
                             <td>
-                                A CLIP Pencil Case and 2 Pencils – awarded to those donating at least $425 per student.
+                                <b>Year of the Piggy Bank.</b> This prize will be awarded to every student who has donated the recommended ask for their grade ($425 (K-5th grade) or $200 (6th-8th grade)) by <b>Thursday, November 15th, 2018</b>.
                             </td>
                         </tr>
                         <tr>
@@ -231,7 +231,7 @@
                                 Class Prize:
                             </td>
                             <td>
-                                Super cool T-shirt with Our Year of the Pig Logo – awarded to the home room (Meyerholz) or grade (Miller) that meets 90% participation rate and 90% target dollar amount.
+                                <b>Year of the Pig T-shirts.</b> This prize will be awarded to each student of each classroom (for K-5) and grade (6-8) if their classroom (or grade for the Miller students) reaches: (a) at least 90% participation rate, AND (b) at least 90% towards the dollar donation goal (as determined by # of students in the class x ask amount).  Please note that BOTH thresholds must be met.
                             </td>
                         </tr>
                         <tr>
@@ -239,7 +239,7 @@
                                 Grand Prize:
                             </td>
                             <td>
-                                A Sling Backpack with Our Year of the Pig Logo -- awarded to the top 3 home room (Meyerholz) or grade (Miller) with the highest percentage towards the target dollar amount.
+                                <b>CLIP Umbrella.</b> This extra special “grand prize” will be given to the top 3 classrooms (or grade for Miller) who raise the most donation dollars by percentage toward dollar goal.
                             </td>
                         </tr>  
                     </table>
