Update Board of Directors

--- a/board_directors.html
+++ b/board_directors.html
@@ -39,14 +39,12 @@
             </tr>
             <tr>
                 <td rowspan="2">Kindergarten</td>
-                <td colspan="2">
-                    <center>Open -- <a href="apply.php?position=kindergarten">Apply now!</a></center>
-                </td>
+                <td>Yi Ding</td>
+                <td><a href="/email.php?board=yi">yi@cusdclipco.org</a></td>
             </tr>
             <tr>
-                <td colspan="2">
-                    <center>Open -- <a href="apply.php?position=kindergarten">Apply now!</a></center>
-                </td>
+                <td>Tatiana Evstigneeva</td>
+                <td><a href="/email.php?board=tatiana">tatiana@cusdclipco.org</a></td>
             </tr>
             <tr>
                 <td rowspan="2">1st Grade</td>
@@ -90,9 +88,8 @@
                 <td><a href="/email.php?board=hui">hui@cusdclipco.org</a></td>
             </tr>
             <tr>
-                <td colspan="2">
-                    <center>Open -- <a href="apply.php?position=5th grade">Apply now!</a></center>
-                </td>
+                <td>Michael Bergamo</td>
+                <td><a href="/email.php?board=michael">michael@cusdclipco.org</a></td>
             </tr>
             <tr>
                 <td rowspan="2">6th Grade</td>
@@ -119,9 +116,8 @@
                 <td><a href="/email.php?board=helen">helen@cusdclipco.org</a></td>
             </tr>
             <tr>
-                <td colspan="2">
-                    <center>Open -- <a href="apply.php?position=8th grade">Apply now!</a></center>
-                </td>
+                <td>Eileen Voon</td>
+                <td><a href="/email.php?board=eileen">eileen@cusdclipco.org</a></td>
             </tr>
         </tbody>
     </table>
