Move prize descriptions
Moved the prize descriptions from the FAQ to the direct give page.

People can just click the link to see the prizes. This way we don't need to update two locations every year.

--- a/direct_give.html
+++ b/direct_give.html
@@ -201,7 +201,34 @@
                 <div class="col-sm-12 text-center">
                     <h2>Prizes</h2>
                     <h4>As with last years, CLIPCO is offering three different prizes to encourage a friendly contest.</h4>
-                    <h2>Direct Give Contest Prizes for 2018-2019 To Be Announced</h2>
+                    <table id="prize-info-table">
+                        <col id="prize-label-column">
+                        <col id="prize-detail-column">
+                        <tr>
+                            <td>
+                                Individual Prize:
+                            </td>
+                            <td>
+                                <b>Year of the Piggy Bank.</b> This prize will be awarded to every student who has donated the recommended ask for their grade ($425 (K-5th grade) or $200 (6th-8th grade)) by <b>Thursday, November 15th, 2018</b>.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Class Prize:
+                            </td>
+                            <td>
+                                <b>Year of the Pig T-shirts.</b> This prize will be awarded to each student of each classroom (for K-5) and grade (6-8) if their classroom (or grade for the Miller students) reaches: (a) at least 90% participation rate, AND (b) at least 90% towards the dollar donation goal (as determined by # of students in the class x ask amount).  Please note that BOTH thresholds must be met.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Grand Prize:
+                            </td>
+                            <td>
+                                <b>CLIP Umbrella.</b> This extra special “grand prize” will be given to the top 3 classrooms (or grade for Miller) who raise the most donation dollars by percentage toward dollar goal.
+                            </td>
+                        </tr>  
+                    </table>
                 </div>
             </div>
         </div>
