--- a/donateFAQ.html
+++ b/donateFAQ.html
@@ -214,36 +214,8 @@
                         rate is also a strong indication of the community’s commitment and support of the program.</p>
 
                     <p><strong class="faq-question">What are the prizes this year?</strong></p>
-                    <p class="faq-answer" style="margin-bottom: 5px;">As with last years, CLIPCO is offering three different prizes to encourage a friendly contest:</p>
-                    <table id="prize-info-table">
-                        <col id="prize-label-column">
-                        <col id="prize-detail-column">
-                        <tr>
-                            <td>
-                                Individual Prize:
-                            </td>
-                            <td>
-                                <b>Year of the Piggy Bank.</b> This prize will be awarded to every student who has donated the recommended ask for their grade ($425 (K-5th grade) or $200 (6th-8th grade)) by <b>Thursday, November 15th, 2018</b>.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Class Prize:
-                            </td>
-                            <td>
-                                <b>Year of the Pig T-shirts.</b> This prize will be awarded to each student of each classroom (for K-5) and grade (6-8) if their classroom (or grade for the Miller students) reaches: (a) at least 90% participation rate, AND (b) at least 90% towards the dollar donation goal (as determined by # of students in the class x ask amount).  Please note that BOTH thresholds must be met.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Grand Prize:
-                            </td>
-                            <td>
-                                <b>CLIP Umbrella.</b> This extra special “grand prize” will be given to the top 3 classrooms (or grade for Miller) who raise the most donation dollars by percentage toward dollar goal.
-                            </td>
-                        </tr>  
-                    </table>
-                    <a href="direct_give.html">See Full Contest Details and Rules</a>
+                    <p class="faq-answer">CLIPCO offers three different prizes to encourage a friendly contest.
+                    <a href="direct_give.html#prizes">See Full Contest Details and Rules</a> for more details.</p>
 
                     <p><strong class="faq-question">When will the winners receive the prizes? </strong></p>
                     <p class="faq-answer">Individual prizes will be handed out to students on specific dates (to be
