--- a/subpage_navbar.html
+++ b/subpage_navbar.html
@@ -18,13 +18,13 @@ display: block;
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://cusdclipco.org">Home</a>
+            <a class="navbar-brand" href="https://www.cusdclipco.org">Home</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
             
                 <li>
-                    <a href="http://www.cusdclipco.blogspot.com">NEWS</a>
+                    <a href="https://www.cusdclipco.blogspot.com">NEWS</a>
                 </li>
 
                 <li class="dropdown">
