--- a/donations.html
+++ b/donations.html
@@ -100,7 +100,7 @@
                 <br>
                 <h2>Online Pledge Form</h2>
                 <h4>
-                    Please use the online pledge form below for both check and PayPal donations. 
+                    Please use the <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_A8vW7z-tze351l7U47s4Li6gXeCiKG2cL1rFf2QS4nFDsQ/viewform" target="_blank">online pledge form</a> for both check and PayPal donations. 
                     <br><br>
                     If paying by check, please return a print out of your email confirmation along with your payment to the 
                     Meyerholz office. Please make checks payable to <b>CLIPCO</b> and include your <b>student&#39;s grade 
@@ -112,13 +112,6 @@
             </div>
             <div class="col-sm-4 col-xs-12" id="stock-image">
                 <img src="https://www.cusdclipco.org/images/donations.JPG" alt="stock-image" class="subpage_image">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="donation-table-div">
-                    <iframe id="form" src="https://docs.google.com/forms/d/e/1FAIpQLSf_A8vW7z-tze351l7U47s4Li6gXeCiKG2cL1rFf2QS4nFDsQ/viewform" scrolling="no"></iframe>
-                </div>
             </div>
         </div>
 		<br><br>
