--- a/honor_roll_2017-2018.html
+++ b/honor_roll_2017-2018.html
@@ -37,6 +37,18 @@
 
             }
 
+            .glyphicon {
+                color:red;
+            }
+
+            .align-right {
+                text-align: right;
+            }
+
+            /*.align-left {
+                text-align: left;
+            }*/
+
         </style>
     </head>
     <body id="top" onload="loadImage(0);">
@@ -675,7 +687,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <p>View the previous year's honor roll <a href="honor_roll_2016-2017.html">here</a>.</p>
+                        <p class="align-left"><a href="honor_roll.html"><span class="glyphicon glyphicon-chevron-left"></span>&nbsp;View the next year's honor roll here.</a></p>
+                        <p class="align-right"><a href="honor_roll.html" ></span>&nbsp;View the previous year's honor roll here.<span class="glyphicon glyphicon-chevron-right"></a></p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-xs-12" id="stock-image">
