row sizing issue fix
fixed unpredictable sizing of panels

--- a/honor_roll_2017-2018.html
+++ b/honor_roll_2017-2018.html
@@ -44,9 +44,9 @@
                 text-align: right;
             }
 
-            /*.align-left {
-                text-align: left;
-            }*/
+            .row {
+                display: block;
+            }
 
         </style>
     </head>
