--- a/honor_roll_2016-2017.html
+++ b/honor_roll_2016-2017.html
@@ -31,6 +31,10 @@
         .glyphicon {
             color:red;
         }
+        
+        .row {
+            display: block;
+        }
 
     </style>
 </head>
