--- a/subpage_navbar.html
+++ b/subpage_navbar.html
@@ -24,7 +24,7 @@ display: block;
             <ul class="nav navbar-nav navbar-right">
             
                 <li>
-                    <a href="https://www.cusdclipco.blogspot.com">NEWS</a>
+                    <a href="http://www.cusdclipco.blogspot.com">NEWS</a>
                 </li>
 
                 <li class="dropdown">
