registration info update
updates to information on the registration info page

--- a/registration_info.html
+++ b/registration_info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>CLIPCO - Registration Info</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,8 +7,11 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
         <link href="css.css" rel="stylesheet" type="text/css" /><script src="https://code.jquery.com/jquery-1.10.2.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script><script src="paralax.js"></script>
-        <style type="text/css">
+        <style>
             /* some css can go here */
+            #how-apply-answer{
+                margin-bottom: 0;
+            }
         </style>
     </head>
     <body id="top" onload="loadImage(0)">
@@ -36,7 +39,7 @@
 
                     <p class="faq-answer">CLIP K-5th grades: <a href="https://www.cusdk8.org/domain/3372">Meyerholz Elementary School</a></p>
 
-                    <p class="faq-answer">CLIP 6-8th grades: <a href="https://www.cusdk8.org/domain/725">Miller Middle School</a></p>
+                    <p class="faq-answer">CLIP 6-8th grades: <a href="https://www.cusdk8.org/Page/2275">Miller Middle School</a></p>
 
                     <p><strong class="faq-question">Do I have to live within the boundaries of the district in order to join CLIP? </strong></p>
 
@@ -44,8 +47,18 @@
 
                     <p><strong class="faq-question">How do I apply to the program? </strong></p>
 
-                    <p class="faq-answer">For kindergarten, you need to register at your neighborhood school during kinder registration then bring the confirmation receipt to Meyerholz during Open Enrollment. Grades 1-5, register at Meyerholz during Open Enrollment. Grades 6-8, register at Miller or Lawson during Open Enrollment. Tour attendance will be verified before you can apply for the program. For more information, please contact the school administration.</p>
+                    <p class="faq-answer" id="how-apply-answer">There are three main enrollment requirements to be eligible for CLIP registration:</p>
+                    <ol>
+                        <li>Follow the procedures for general district registration.</li>
+                        <li>Attend a mandatory CLIP Tour.</li>
+                        <li>Follow the procedures and meet the deadlines for Open Enrollment for the CLIP program.</li>
+                    </ol>
 
+
+                    Please visit the sites below for specific information and note that the CLIP K-5 tours start in November and run through January.  There is a single CLIP 6-8 tour December 13th.
+                    <p class="indent">CLIP K-5:&nbsp;<a href="https://www.cusdk8.org/domain/3372">registration site</a>.</p>
+                    <p class="indent">CLIP 6-8:&nbsp;<a href="https://www.cusdk8.org/Page/2275">registration site</a>.</p>
+                    <br>
                     <p><strong class="faq-question">Does the CLIP program teach traditional or simplified Chinese? </strong></p>
 
                     <p class="faq-answer">Students at Meyerholz will begin learning written Chinese using zhuyin in conjunction with traditional characters. They will use traditional characters during the primary grades. Students will begin learning pinyin in grades 4 and 5 for use with computers and pleasure reading. Students in grades 6-8 will continue to use traditional characters as the basis of the program, but will also be introduced to simplified characters.</p>
@@ -78,6 +91,6 @@
                 <a href="#top" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
             </footer>
         </div>
-        <script type="text/javascript" src="js.js"></script>
+        <script src="js.js"></script>
     </body>
 </html>
